--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ body {
   font-weight: 400;
   font-family: "LouisVuitton";
   font-size: 16px;
-  overflow: hidden;
+  overflow-x: hidden;
   overflow-y: scroll;
   min-height: 590px;
 }
@@ -148,7 +148,8 @@ a:focus {
   font-size: 0.4em;
   position: relative;
   top: -10px;
-  overflow: scroll !important;
+  overflow-y: scroll !important;
+  overflow-x: hidden;
 }
 
 
